Добавление новых фичей